fix: mobile header (#7)
# Issue

Closes #5.

# Overview

This resizes header elements such that it doesn't break on smaller
mobile devices.

--- a/app/assets/stylesheets/2-components/header.css
+++ b/app/assets/stylesheets/2-components/header.css
@@ -13,9 +13,13 @@
   align-items: center;
   gap: var(--spacing-sm);
   font-weight: 700;
-  font-size: 1.125rem;
+  font-size: 1rem;
   text-decoration: none;
   color: var(--color-text);
+
+  @media (min-width: 500px) {
+    font-size: 1.125rem;
+  }
 
   @media (prefers-color-scheme: dark) {
     --color-text: var(--color-white);
